--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>I have no idea how to turn this into a proper website but let's see where this takes me.</p>
 </body>
 </html>
