--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
+<h1>Hello there friends!</h1>
 <p>I have no idea how to turn this into a proper website but let's see where this takes me.</p>
 </body>
 </html>
