--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello there friends!</h1>
+<h1>Hi there.</h1>
 <p>I have no idea how to turn this into a proper website but let's see where this takes me.</p>
+  <p>It's been a few days and I still can't turn this into something.</p>
 </body>
 </html>
