--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
 <h1>Hi there.</h1>
 <p>I have no idea how to turn this into a proper website but let's see where this takes me.</p>
   <p>It's been a few days and I still can't turn this into something.</p>
+  <p>In the mean time, check my <a href="https://instagram.com/zarinamari">instagram</a> for personal works.</p>
+  <p>and my <a href="https://behance.net/zardelacruz">behance</a> which needs an update.</p>
 </body>
 </html>
