--- a/index.html
+++ b/index.html
@@ -1,10 +1,65 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
+<head>
+<meta charset="UTF-8">
+<title>Zar Dela Cruz</title>
+<style>
+div.title {
+		font-family: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
+		color: cadetblue;
+		font-size: 16px;
+	}
+div.work {
+		font-family:Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
+		color: #242C2F;
+		font-size: 12px;
+	}
+	div.education {
+		font-family: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
+		color: #242C2F;
+		font-size: 12px;
+	}
+	
+</style>
+</head>
+
 <body>
-<h1>Hi there.</h1>
-<p>I have no idea how to turn this into a proper website but let's see where this takes me.</p>
-  <p>It's been a few days and I still can't turn this into something.</p>
-  <p>In the mean time, check my <a href="https://instagram.com/zarinamari">instagram</a> for personal works.</p>
-  <p>and my <a href="https://behance.net/zardelacruz">behance</a> which needs an update.</p>
+<div class="title">	
+	<h1>Zarina Mari Dela Cruz</h1>
+	<p>zarinamari.delacruz@gmail.com / 2027189386 / 3258 Gallows Road, Fairfax, VA 22031, USA</p>
+	</div>
+
+<div class="work">
+<h2>Work Experience</h2>
+	<p>Graphic Designer<br>
+	Freelance<br>
+	February 2018 - Present<br>
+	Conceptualized several logos for different clients. Created designs for website and print materials.</p>
+	<p>Graphic Designer<br>
+	Florabel Group of Restaurants | Makati, Manila, Philippines<br>
+	October 2016 - January 2018<br>
+	Responsible for conceptualising promotional materials with the design team for both the company and its many restaurants. Worked alongside different companies for the restaurants' signages. </p>
+	<p>Design Intern<br>
+	Monsters Centaur Production Inc. | Makati, Manila, Philippines<br>
+	June 2015<br>
+	Conceptualized brand identities and created infographics and social media posts for the company's clients.</p>
+	</div>
+	
+<div class="education">
+<h2>Education</h2>
+	<p>Northern Virginia Community College<br>
+	Alexandira, VA, USA<br>
+	Graphic Design / Interactive Design<br>
+	August 2018 - Present</p>
+	<p>University of Sto. Tomas<br>
+	España, Manila, PH<br>
+	Bachelor of Fine Arts major in Advertising Arts<br>
+	June 2012 - June 2016</p>
+	<p>St. Joseph College<br>
+	Cavite City, Cavite, PH<br>
+	High School<br>
+	2011 - 2012</p>
+	</div>
+
 </body>
 </html>
