change to landing page

--- a/index.html
+++ b/index.html
@@ -2,64 +2,30 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Zar Dela Cruz</title>
+<title>hello 404</title>
 <style>
 div.title {
 		font-family: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
-		color: cadetblue;
-		font-size: 16px;
-	}
-div.work {
-		font-family:Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
-		color: #242C2F;
-		font-size: 12px;
-	}
-	div.education {
+		color: teal;
+		font-size: 36px;
+	}	
+	div.description {
 		font-family: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
-		color: #242C2F;
-		font-size: 12px;
+		color:dimgray;
+		font-size: 15px;
 	}
-	
 </style>
 </head>
 
 <body>
-<div class="title">	
-	<h1>Zarina Mari Dela Cruz</h1>
-	<p>zarinamari.delacruz@gmail.com / 2027189386 / 3258 Gallows Road, Fairfax, VA 22031, USA</p>
-	</div>
-
-<div class="work">
-<h2>Work Experience</h2>
-	<p>Graphic Designer<br>
-	Freelance<br>
-	February 2018 - Present<br>
-	Conceptualized several logos for different clients. Created designs for website and print materials.</p>
-	<p>Graphic Designer<br>
-	Florabel Group of Restaurants | Makati, Manila, Philippines<br>
-	October 2016 - January 2018<br>
-	Responsible for conceptualising promotional materials with the design team for both the company and its many restaurants. Worked alongside different companies for the restaurants' signages. </p>
-	<p>Design Intern<br>
-	Monsters Centaur Production Inc. | Makati, Manila, Philippines<br>
-	June 2015<br>
-	Conceptualized brand identities and created infographics and social media posts for the company's clients.</p>
+	<div class="title">
+	<h1>It's not you, it's me.</h1>
 	</div>
 	
-<div class="education">
-<h2>Education</h2>
-	<p>Northern Virginia Community College<br>
-	Alexandira, VA, USA<br>
-	Graphic Design / Interactive Design<br>
-	August 2018 - Present</p>
-	<p>University of Sto. Tomas<br>
-	España, Manila, PH<br>
-	Bachelor of Fine Arts major in Advertising Arts<br>
-	June 2012 - June 2016</p>
-	<p>St. Joseph College<br>
-	Cavite City, Cavite, PH<br>
-	High School<br>
-	2011 - 2012</p>
+	<div class="description">
+	<p>this page is currently under construction.<br>
+	you may check my behance and instagram for the mean time.<br>
+	feel free to email me if you need anything.</p>
 	</div>
-
 </body>
 </html>
