update to landing page

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@ div.title {
 	</div>
 	
 	<div class="description">
-	<p>this page is currently under construction.<br>
-	you may check my behance and instagram for the mean time.<br>
-	feel free to email me if you need anything.</p>
+	<p>this page is currently under construction as i work on my web design skills.<br>
+	in the mean time, you may check my behance and instagram.<br>
+	or feel free to email me if you need anything.</p>
 	</div>
 </body>
 </html>
