--- a/index.html
+++ b/index.html
@@ -3,18 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>hello 404</title>
-<style>
-div.title {
-		font-family: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
-		color: teal;
-		font-size: 36px;
-	}	
-	div.description {
-		font-family: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
-		color:dimgray;
-		font-size: 15px;
-	}
-</style>
+
+<link href="external_landing.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
