--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	
 	<div class="description">
 	<p>this page is currently under construction as i work on my web design skills.<br>
-	in the mean time, you may check my behance and instagram.<br>
+	in the mean time, you may check out my <a href="https://www.behance.net/zardelacruz">behance</a> and <a href="https://www.instagram.com/zarinamari">instagram.</a><br>
 	or feel free to email me if you need anything.</p>
 	</div>
 </body>
