--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
 	<div class="description">
 	<p>this page is currently under construction as i work on my web design skills.<br>
 	in the mean time, you may check out my <a href="https://www.behance.net/zardelacruz">behance</a> and <a href="https://www.instagram.com/zarinamari">instagram.</a><br>
-	or feel free to email me if you need anything.</p>
+		or feel free to <a href="mailto:zarinamari.delacruz@gmail.com">email me</a> if you need anything.<br>
+		<br>
+		<br>
+		<em>zar</em></p>
+		
+
 	</div>
 </body>
 </html>
