--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</div>
 	
 	<div class="description">
-	<p>this page is currently under construction as i work on my web design skills.<br>
+	<p>this page is currently under construction as i work on my non-existent web design skills.<br>
 	in the mean time, you may check out my <a href="https://www.behance.net/zardelacruz">behance</a> and <a href="https://www.instagram.com/zarinamari">instagram.</a><br>
 		or feel free to <a href="mailto:zarinamari.delacruz@gmail.com">email me</a> if you need anything.<br>
 		<br>
