--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 		or feel free to <a href="mailto:zarinamari.delacruz@gmail.com">email me</a> if you need anything.<br>
 		<br>
 		<br>
-		<em>zar</em></p>
+		<p>thanks!</p>
+		<em>♡ zar</em></p>
 		
 
 	</div>
