--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link href="external_landing.css" rel="stylesheet" type="text/css">
 	
 <link rel="shortcut icon" type="image/png" href="/zar_v1.ico"/>
+<link rel="shortcut icon" type="image/png" href="https://imgur.com/a/EpYKS5O"/>
 </head>
 
 <body>
