--- a/index.html
+++ b/index.html
@@ -2,28 +2,18 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>hello 404</title>
-
-<link href="external_landing.css" rel="stylesheet" type="text/css">
-	
-<link rel="shortcut icon" type="image/png" href="/zar_v1.ico"/>
-<link rel="shortcut icon" type="image/png" href="https://imgur.com/a/EpYKS5O"/>
+<title>zar's world</title>
+<link href="mystyle.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-	<div class="title">
-	<h1>It's not you, it's me.</h1>
-	</div>
 	
-	<div class="description">
-	<p>this page is currently under construction as i work on my web design skills.<br>
-	in the mean time, you may check out my <a href="https://www.behance.net/zardelacruz">behance</a> and <a href="https://www.instagram.com/zarinamari">instagram.</a><br>
-		or feel free to <a href="mailto:zarinamari.delacruz@gmail.com">email me</a> if you need anything.<br>
-		<br>
-		<br>
-		<em>zar</em></p>
-		
-
-	</div>
+	<h1>Hello Stranger!</h1>
+	
+	<a href="about.html" class="button">about</a>
+	<a href="resume.html" class="button">resume</a>
+	<a href="portfolio.html" class="button">portfolio</a>
+	<a href="contact.html" class="button">contact</a>
+	
 </body>
 </html>
