--- a/index.html
+++ b/index.html
@@ -7,13 +7,22 @@
 </head>
 
 <body>
-	
+	<header>	
 	<h1>Hello Stranger!</h1>
+	</header>
 	
-	<a href="about.html" class="button">about</a>
-	<a href="resume.html" class="button">resume</a>
-	<a href="portfolio.html" class="button">portfolio</a>
-	<a href="contact.html" class="button">contact</a>
+	<nav>
+	<button onClick="window.location.href = 'about.html';">about</button>
+		
+	<button onClick="window.location.href = 'resume.html';">resume</button>
+		
+	<button onClick="window.location.href = 'portfolio.html';">portfolio</button>
+		
+	<button onClick="window.location.href = 'contact.html';">contact</button>
+	
+	
+	</nav>
+	
 	
 </body>
 </html>
