--- a/about.html
+++ b/about.html
@@ -1,11 +1,35 @@
 <!doctype html>
 <html>
+	
 <head>
 <meta charset="UTF-8">
 <title>about zar</title>
+<style type="text/css">
+	
+body {
+    background-color: goldenrod;
+    width: auto;
+}
+h1 {
+	
+	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
+	font-size: 40px;
+	text-align:left;
+	color: beige;
+
+}
+	
+</style>
 </head>
 
 <body>
-	<h1>about</h1>
+	
+	<header>
+	<h1>about zar</h1>
+	</header>	
+		
+		
+		
+		
 </body>
 </html>
