--- a/about.html
+++ b/about.html
@@ -9,12 +9,13 @@
 body {
     background-color: goldenrod;
     width: auto;
+    margin-top: 200px;
 }
 h1 {
 	
 	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
 	font-size: 40px;
-	text-align:left;
+	text-align:center;
 	color: beige;
 
 }
