--- a/about.html
+++ b/about.html
@@ -1,56 +1,36 @@
 <!doctype html>
 <html>
+	
 <head>
 <meta charset="UTF-8">
-<title>contact zar</title>
+<title>about zar</title>
 <style type="text/css">
-body {
-    width: auto;
-    margin-top: 200px;
-	background-color: goldenrod;
-}
 	
+body {
+    background-color: goldenrod;
+    width: auto;
+	margin-top: 200px;
+}
 h1 {
+	
 	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
 	font-size: 40px;
+	text-align:center;
 	color: beige;
-	text-align: center;
-	
-	}
-	
-p {
-	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
-	font-size: 15px;
-	color: beige;
-	text-align: center;
+
 }
+	
 </style>
 </head>
 
 <body>
+	
 	<header>
-	<h1>contact me</h1>
-	<p>
-	<a href="mailto:zarinamari.delacruz@gmail.com">zarinamari.delacruz@gmail.com</a>
-	</p>
-	
-	<p>	
-	<a href="https://www.behance.net/zardelacruz">behance</a>	
-	</p>	
-		
-	<p>	
-	<a href="https://www.instagram.com/zarinamari">instagram</a>	
-	</p>
+	<h1>about zar</h1>
+	</header>	
 		
 		
-	</header>
-	
-	
-	
-	
-	
-	
-	
-	
+		
+		
 </body>
 </html>
