--- a/index.html
+++ b/index.html
@@ -2,27 +2,24 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>zar's world</title>
+<title>zarizard</title>
 <link href="mystyle.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-	<header>	
-	<h1>Hello Stranger!</h1>
+	<div id="logo_btn"><a href="index.html"><img src="images/zar_v1.png" width="50" height="50" alt="zar logo"/></a></div>
+	
+<nav>
+
+<a href="about.html">about</a>&nbsp;
+<a href="#">works</a>&nbsp;
+<a href="contact.html">contact</a>
+
+</nav>
+	
+<header>	
+	<h1>Hello there!</h1>
 	</header>
-	
-	<nav>
-	<button onClick="window.location.href = 'about.html';">about</button>
-		
-	<button onClick="window.location.href = 'resume.html';">resume</button>
-		
-	<button onClick="window.location.href = 'portfolio.html';">portfolio</button>
-		
-	<button onClick="window.location.href = 'contact.html';">contact</button>
-	
-	
-	</nav>
-	
-	
+<div id="brief_descrpt">I'm Zarina Dela Cruz and I do logo identity systems and digital designs.<br>I also enjoy lettering, traveling &amp; meeting dogs.</div>
 </body>
 </html>
