--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<div id="logo_btn"><a href="index.html"><img src="images/zar_v1.png" width="50" height="50" alt="zar logo"/></a></div>
+	<div id="logo_btn"><a href="index.html"><img src="zar_v1.png" width="50" height="50" alt="zar logo"/></a></div>
 	
 <nav>
 
