--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title>zarizard</title>
-<link href="mystyle.css" rel="stylesheet" type="text/css">
+<link href="css/mystyle.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 <div id="main_container">
-  <div id="logo_btn"><a href="index.html"><img src="zar_v1.png" width="50" height="50" alt="zar logo"/></a></div>
+  <div id="logo_btn"><a href="index.html"><img src="imgs/zar_v1.png" width="50" height="50" alt="zar logo"/></a></div>
   
   <nav>
     
@@ -23,16 +23,16 @@
   </header>
   <div id="brief_descrpt">I'm Zarina Dela Cruz and I do logo identity systems and digital designs.<br>I also enjoy lettering, traveling &amp; meeting dogs.</div>
   <div id="gallery_1">
-<a href="#">
+<a href="logos.html">
 <img src="imgs/placeholder/72ppi/logos.png" width="288" height="167" alt=""/>
 </a>
 
 	  
-<a href="#">	  
+<a href="hand_lttrng.html">	  
 <img src="imgs/placeholder/72ppi/hand_lettering.png" width="288" height="167" alt=""/>
 </a>
   
-<a href="#">
+<a href="posters.html">
 <img src="imgs/placeholder/72ppi/posters.png" width="288" height="167" alt=""/>
 </a>
 </div>
@@ -40,21 +40,21 @@
 	
 
 <div id="gallery_2">
-<a href="#">
+<a href="animation.html">
 <img src="imgs/placeholder/72ppi/animation.png" width="288" height="167" alt=""/>
 </a>
 
-<a href="#">
+<a href="packaging.html">
 <img src="imgs/placeholder/72ppi/packaging.png" width="288" height="167" alt=""/>
 </a>
     
-<a href="#">
+<a href="print.html">
 <img src="imgs/placeholder/72ppi/print.png" width="288" height="167" alt=""/>
 </a>
 </div>
 
 <div id="footer">
-<div id="col_1"><img src="imgs/work_together.png" width="350" height="350" alt=""/>
+<div id="col_1"><img src="imgs/work_together.png" width="308" height="308" alt=""/>
 </div>
 <div id="col_2">
 <h2>
