--- a/about.html
+++ b/about.html
@@ -4,31 +4,44 @@
 <head>
 <meta charset="UTF-8">
 <title>about zar</title>
-<style type="text/css">
-	
-body {
-    background-color: goldenrod;
-    width: auto;
-	margin-top: 200px;
-}
-h1 {
-	
-	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
-	font-size: 40px;
-	text-align:center;
-	color: beige;
 
-}
-	
-</style>
+<link href="myabout.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
+<div id="main_container">
+  <div id="logo_btn"><a href="index.html"><img src="imgs/zar_v1.png" width="50" height="50" alt="zar logo"/></a></div>
+  
+  <nav>
+    
+    <a href="about.html">about</a>&nbsp;
+    <a href="#">works</a>&nbsp;
+    <a href="contact.html">contact</a>
+    
+  </nav>
 	
-	<header>
-	<h1>about zar</h1>
-	</header>	
-		
+	
+	<header>	
+    <h1>about me</h1>
+  </header>
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+</div>
 		
 		
 		
